@@ -22,7 +22,7 @@
 #    Alasdair Allan (aa@astro.ex.ac.uk)
 
 #  Revision:
-#     $Id: jach_agent.pl,v 1.15 2005/02/11 15:03:07 aa Exp $
+#     $Id: jach_agent.pl,v 1.16 2005/02/15 15:44:41 aa Exp $
 
 #  Copyright:
 #     Copyright (C) 2003 University of Exeter. All Rights Reserved.
@@ -67,7 +67,7 @@ translation layer, which also handles external phase 0 discovery requests.
 
 =head1 REVISION
 
-$Id: jach_agent.pl,v 1.15 2005/02/11 15:03:07 aa Exp $
+$Id: jach_agent.pl,v 1.16 2005/02/15 15:44:41 aa Exp $
 
 =head1 AUTHORS
 
@@ -84,7 +84,7 @@ Copyright (C) 2003 University of Exeter. All Rights Reserved.
 #  Version number - do this before anything else so that we dont have to 
 #  wait for all the modules to load - very quick
 BEGIN {
-  $VERSION = sprintf "%d.%d", q$Revision: 1.15 $ =~ /(\d+)\.(\d+)/;
+  $VERSION = sprintf "%d.%d", q$Revision: 1.16 $ =~ /(\d+)\.(\d+)/;
  
   #  Check for version number request - do this before real options handling
   foreach (@ARGV) {
@@ -488,6 +488,12 @@ if ( $config->get_state("jach.unique_process") == 1 ) {
    # connection options defaults
    $config->set_option("connection.timeout", 5 );
    $config->set_option("connection.proxy", 'NONE'  ); 
+   
+   # mail server
+   $config->set_option("mailhost.name", 'ieie' );
+   $config->set_option("mailhost.domain", 'jach.hawaii.edu' );
+   $config->set_option("mailhost.timeout", 30 );
+   $config->set_option("mailhost.debug", 1 );
     
    # C O M M I T T   O P T I O N S  T O   F I L E S
    # ----------------------------------------------
@@ -815,6 +821,9 @@ sub kill_agent {
 # T I M E   A T   T H E   B A R  -------------------------------------------
 
 # $Log: jach_agent.pl,v $
+# Revision 1.16  2005/02/15 15:44:41  aa
+# Created an eSTAR::Mail class to handle mail messages, modified gcn_server.pl and jach_agent.pl to use it.
+#
 # Revision 1.15  2005/02/11 15:03:07  aa
 # Modified to clean out rejected messages from the state directory
 #
