@@ -1,3 +1,8 @@
+2005-02-15 Aladair Allan <aa@astro.ex.ac.uk>
+
+        * Created an eSTAR::Mail class to handle mail messages, modified
+          gcn_server.pl and jach_agent.pl to use it.
+          
 2005-02-14 Aladair Allan <aa@astro.ex.ac.uk>
 
         * bin/gcn_server.pl: Added email notification of alerts being passed
